--- a/team.html
+++ b/team.html
@@ -287,7 +287,7 @@ Jinjoo Shim holds a diploma (M.Sc.) in Biostatistics at Columbia University in t
     <!-- contact info -->
     <div class="card shadow">
 
-  <img id="mypic" src="/assets/mklausmann.jpg" class="border-0 card-img-top" alt="me">
+  <img id="mypic" src="/assets/mklausmann.png" class="border-0 card-img-top" alt="me">
 
 
  <div class="card-body pb-0 text-center">
@@ -301,10 +301,39 @@ Jinjoo Shim holds a diploma (M.Sc.) in Biostatistics at Columbia University in t
 <div class="col-md-9 order-2 mt-3">
     <p style="text-align:justify">
 
-<b>Mike Klausmann</b> is a Software engineer and MAS student at ETH Zurich.
+<b>Mike Klausmann</b> is a software engineer and MAS student at ETH Zurich.
 <br>
 <br>
 Mike Klausmann holds a diploma (M.Sc.) in computer science from ETH Zurich. Since his graduation in 2011, he worked as a software developer for the Inventage AG, where he participated in several projects in the fintech sector. In 2020 he started his MAS at the MTEC department and is currently working on his thesis at the Center for Digital Health Interventions at ETH Zurich.
+</p>
+
+  </div>
+</div>
+
+<div class="row">
+
+<div class="col-md-3 order-1 mt-3">
+    <!-- contact info -->
+    <div class="card shadow">
+
+  <img id="mypic" src="/assets/Ceylan_Mesut.png" class="border-0 card-img-top" alt="me">
+
+
+ <div class="card-body pb-0 text-center">
+        <p>Email: <a target="_blank" href="mailto:mesut.ceylan@mtec.ethz.ch">mesut.ceylan@mtec.ethz.ch</a><br></p>
+      </div>
+
+</div>
+
+  </div>
+
+<div class="col-md-9 order-2 mt-3">
+    <p style="text-align:justify">
+
+<b>Mesut Ceylan</b> is a data science master student at Department of Informatics at the University of Zurich.
+<br>
+<br>
+In his master thesis at the Centre for Digital Health Interventions at ETH Zurich, he has been developing machine learning models for respiratory disease classification from smartphone audio signals. Mesut has several years of work experience in different roles in the healthcare industry.
 </p>
 
   </div>
