included patrick on the website

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <p style="text-align:justify">
 
 Our <b>research goals</b> are to advance patient-centered healthcare and
-to provide insight into biological biomarkers by answering clinically relevant research questions in the field of health informatics.
+to provide insight into biological markers by answering clinically relevant research questions in the field of health informatics.
 <br>
 <br>
    Our <b>approach</b> consists of refining relevant research questions in collaboration with medical professionals, networking with data holders when needed, employing consumer-centric devices as sensing tools, and applying appropriate statistical methods (e.g., Machine Learning and Deep Learning) to develop predicting models from observational research.
@@ -195,6 +195,8 @@ to provide insight into biological biomarkers by answering clinically relevant r
 <div class="col-md-9 order-4">
 
     <h2 id="news">News</h2>
+
+    <p><i class="far fa-newspaper"></i> <strong>May 09, 2022</strong><br>I am excited to announce that <b>Patrick Langer</b> started at our group! He will be working on digital biomarkers for adolescents with asthma.</p>
 
     <p><i class="far fa-newspaper"></i> <strong>February 13, 2022</strong><br>I am excited to announce that our paper <b>TripletCough: Cougher Identification and Verification from Contact-Free Smartphone-Based Audio Recordings Using Metric Learning</b> got accepted at the IEEE Journal of Biomedical and Health Informatics! Early release manuscript is available <a href="https://ieeexplore.ieee.org/document/9720192" target="_blank" rel="noopener noreferrer">here</a>.</p>
 
