--- a/news.html
+++ b/news.html
@@ -135,6 +135,8 @@
 
 <h2 id="news">News</h2>
 
+<p><i class="far fa-newspaper"></i> <strong>May 09, 2022</strong><br>I am excited to announce that <b>Patrick Langer</b> started at our group! He will be working on digital biomarkers for adolescents with asthma.</p>
+
 <p><i class="far fa-newspaper"></i> <strong>February 13, 2022</strong><br>I am excited to announce that our paper <b>TripletCough: Cougher Identification and Verification from Contact-Free Smartphone-Based Audio Recordings Using Metric Learning</b> got accepted at the IEEE Journal of Biomedical and Health Informatics! Early release manuscript is available <a href="https://ieeexplore.ieee.org/document/9720192" target="_blank" rel="noopener noreferrer">here</a>.</p>
 
 <p><i class="far fa-newspaper"></i> <strong>January 03, 2022</strong><br>I am excited to announce that <b>Jinjoo Shim</b> started at our group! She will be working on the digitalization of of inflammatory biomarkers for chronic systemic inflammation.</p>
