--- a/team.html
+++ b/team.html
@@ -256,7 +256,7 @@ Fan Wu obtained her bachelor's degree in electrical engineering and automation f
 
  <div class="card-body pb-0 text-center">
         <p>Office: WEV G214 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
- Email: <a target="_blank" href="mailto:fanwu@ethz.ch">jshim@ethz.ch</a><br>
+ Email: <a target="_blank" href="mailto:jshim@ethz.ch">jshim@ethz.ch</a><br>
   <a href="https://ch.linkedin.com/in/jinjooshim" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a></p>
       </div>
 
@@ -271,6 +271,41 @@ Fan Wu obtained her bachelor's degree in electrical engineering and automation f
 <br>
 <br>
 Jinjoo Shim holds a diploma (M.Sc.) in Biostatistics at Columbia University in the City of New York. Before joining the Centre for Health Interventionsn, she worked as a data scientist, a biostatistician, and an epidemiologist. She collaborated in clinical and non-clinical research projects examining cost-effectiveness, patient outcomes, social value of treatment, drug utilization, efficacy, quality of care, regulatory guidelines using various real world data (e.g. national-level claims, EHR, registries, omics).
+<br>
+<br>
+
+</p>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+<div class="col-md-3 order-1 mt-3">
+    <!-- contact info -->
+    <div class="card shadow">
+
+  <img id="mypic" src="/assets/patrick.jpg" class="border-0 card-img-top" alt="me">
+
+
+ <div class="card-body pb-0 text-center">
+        <p>Office: WEV G214 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
+ Email: <a target="_blank" href="mailto:planger@ethz.ch">planger@ethz.ch</a><br>
+  <a href="https://www.linkedin.com/in/patrick-langer-103984214" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a></p>
+      </div>
+
+</div>
+
+  </div>
+
+<div class="col-md-9 order-2 mt-3">
+    <p style="text-align:justify">
+
+<b>Patrick Langer</b> is a Ph. D. candidate and doctoral researcher at the Center for Digital Health Interventions since May 2022.
+<br>
+<br>
+He holds a Bachelor’s as well as a Master’s degree from TU Ilmenau in Computer Science Engineering with specialisations in medical technologies, machine learning and embedded hardware &amp; software. Having started programming and working with embedded hardware at a very young age, Patrick gained numerous technical skills throughout the years in a self-taught manner and is passionate about applying these skills to solve medical problems.  He is one of the winners of the German “Jugend forscht” prize (in 2016), for which he built an EMG-based device that allows handicapped people to play games or write texts. In his master thesis, he developed realtime machine learning applications aiding patients suffering from Parkinson’s disease in everyday life.
 <br>
 <br>
 
